# amazon-freertos

demos/cellular_manager/: cellular_manager.c
libraries/abstractions/cellular/test/: test_cellular_api.c
projects/ublox/c030_r412m/uvision/aws_tests/: aws_tests.uvoptx  aws_tests.uvprojx
tests/common/: aws_test_runner.c
tests/include/: aws_test_cellular.h
vendors/aws/modules/3gpp/ports/cellular/src/: cellular_at_core.c
vendors/ublox/: manifest.cmake
vendors/ublox/boards/c030_r412m/: CMakeLists.txt  c030_r412m.sct
vendors/ublox/boards/c030_r412m/aws_demos/application_code/st_code/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
vendors/ublox/boards/c030_r412m/aws_demos/config_files/: FreeRTOSConfig.h
vendors/ublox/boards/c030_r412m/aws_demos_TODO/application_code/: main.c
vendors/ublox/boards/c030_r412m/aws_demos_TODO/application_code/st_code/: entropy_hardware_poll.c
vendors/ublox/boards/c030_r412m/aws_demos_TODO/config_files/: FreeRTOSConfig.h  core_pkcs11_config.h
vendors/ublox/boards/c030_r412m/aws_tests/application_code/: main.c
vendors/ublox/boards/c030_r412m/aws_tests/application_code/st_code/: flash.h  flash_l4.c  startup_stm32f437xx.s  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.h
vendors/ublox/boards/c030_r412m/aws_tests/config_files/: FreeRTOSConfig.h  aws_demo_config.h  aws_secure_sockets_config.h  aws_test_runner_config.h  aws_wifi_config.h  core_test_pkcs11_config.h  iot_test_common_io_config.h
vendors/ublox/boards/c030_r412m/ports/comm_if/: comm_if_uart.c  device_control.c
vendors/ublox/boards/c030_r412m/ports/common_io/: iot_test_common_io_internal.c  iot_uart.c
vendors/ublox/boards/c030_r412m/ports/pkcs11/: core_pkcs11_pal.c
vendors/ublox/sdk/CMSIS/: system_stm32f4xx.c
vendors/ublox/sdk/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_rcc.c
